--- a/apirest-books/src/main/resources/application.properties
+++ b/apirest-books/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=apirest-books
+spring.datasource.url=jdbc:h2:mem:booksdb;MODE=MySQL;
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
 logging.level.org.hibernate.SQL=debug
