+ spring secutiry, + sawagger

--- a/apirest-books/src/main/resources/application.properties
+++ b/apirest-books/src/main/resources/application.properties
@@ -2,7 +2,17 @@ spring.application.name=apirest-books
 spring.datasource.url=jdbc:h2:mem:booksdb;MODE=MySQL;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 logging.level.org.hibernate.SQL=debug
+spring.h2.console.enabled=true
+
+# Spring Security
+spring.security.user.name=jhojan
+spring.security.user.password=curso2025
+
+# Swagger configuration
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+#springdoc.swagger-ui.path=/swagger-ui.html
